docs/api/qiskit/0.40/qiskit.transpiler.passes.LinearFunctionsSynthesis.mdx
---
title: LinearFunctionsSynthesis (v0.40)
description: API reference for qiskit.transpiler.passes.LinearFunctionsSynthesis in qiskit v0.40
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.LinearFunctionsSynthesis
---

# LinearFunctionsSynthesis

<Class id="qiskit.transpiler.passes.LinearFunctionsSynthesis" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.23/qiskit/transpiler/passes/synthesis/linear_functions_synthesis.py" signature="LinearFunctionsSynthesis(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.passes.synthesis.high_level_synthesis.HighLevelSynthesis`](qiskit.transpiler.passes.HighLevelSynthesis "qiskit.transpiler.passes.synthesis.high_level_synthesis.HighLevelSynthesis")

  DEPRECATED: Synthesize linear functions.

  Under the hood, this runs the default high-level synthesis plugin for linear functions.

  ## Methods

  <span id="qiskit-transpiler-passes-linearfunctionssynthesis-name" />

  ### name

  <Function id="qiskit.transpiler.passes.LinearFunctionsSynthesis.name" signature="LinearFunctionsSynthesis.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-linearfunctionssynthesis-run" />

  ### run

  <Function id="qiskit.transpiler.passes.LinearFunctionsSynthesis.run" signature="LinearFunctionsSynthesis.run(dag)">
    Run the HighLevelSynthesis pass on dag. :type dag: [`DAGCircuit`](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.dagcircuit.DAGCircuit") :param dag: input dag.

    **Return type**

    [`DAGCircuit`](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.dagcircuit.DAGCircuit")

    **Returns**

    Output dag with certain Operations synthesized (as specified by the hls\_config).

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – when the specified synthesis method is not available.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.LinearFunctionsSynthesis.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.LinearFunctionsSynthesis.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

